--- a/nodejs/tossAPI/package.json
+++ b/nodejs/tossAPI/package.json
@@ -13,11 +13,13 @@
     "@tosspayments/payment-widget-sdk": "^0.5.4",
     "axios": "^1.3.2",
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "faker": "^5.5.3",
     "mongoose": "^6.9.0",
     "mongoose-session": "^0.0.4",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20"
   }
 }
