--- a/nodejs/tossAPI/package.json
+++ b/nodejs/tossAPI/package.json
@@ -14,12 +14,14 @@
     "axios": "^1.3.2",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "faker": "^5.5.3",
     "mongoose": "^6.9.0",
     "mongoose-session": "^0.0.4",
     "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "crypto-js": "^4.1.1"
   }
 }
