--- a/nodejs/Board/package.json
+++ b/nodejs/Board/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1317.0",
     "axios": "^1.3.2",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
@@ -18,6 +19,8 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.9.0",
     "mongoose-session": "^0.0.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "nodemon": "^2.0.20"
   }
 }
