--- a/nodejs/board-Folder-Refactoring/package.json
+++ b/nodejs/board-Folder-Refactoring/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon",
+    "dev": "nodemon -L",
     "ts": "tsc-watch --onSuccess \"node build/server.js\" "
   },
   "author": "",
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/mongoose": "^5.11.97",
     "body-parser": "^1.20.2",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
