--- a/nodejs/board-Folder-Refactoring/package.json
+++ b/nodejs/board-Folder-Refactoring/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.2",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^6.10.0",
