--- a/nodejs/board-Folder-Refactoring/package.json
+++ b/nodejs/board-Folder-Refactoring/package.json
@@ -24,9 +24,11 @@
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^6.10.0",
+    "mongoose-session": "^0.0.4",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.10.1",
     "typedi": "^0.10.0"
