--- a/nodejs/board-Folder-Refactoring/package.json
+++ b/nodejs/board-Folder-Refactoring/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -L",
+    "dev": "nodemon",
     "ts": "tsc-watch --onSuccess \"node build/server.js\" "
   },
   "author": "",
@@ -20,11 +20,13 @@
   },
   "dependencies": {
     "@types/mongoose": "^5.11.97",
+    "axios": "^1.3.4",
     "body-parser": "^1.20.2",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
+    "env": "^0.0.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^6.10.0",
