--- a/nodejs/board-Folder-Refactoring/package.json
+++ b/nodejs/board-Folder-Refactoring/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.6",
-    "@types/node": "^18.14.1",
+    "@types/node": "^18.15.5",
+    "@types/nodemailer": "^6.4.7",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
@@ -31,8 +32,12 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.10.0",
     "mongoose-session": "^0.0.4",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.10.1",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "typeorm": "^0.3.12"
   }
 }
